# CPPND-ImageBluring

./: CMakeLists.txt  README.md  a.out  install.sh  toBitmap.py
data/: img_to_bw.py
src/: Gui.cpp  Gui.h  Img.cpp  Img.h  ImgPool.cpp  ImgPool.h  main.cpp
